--- a/reverse-length-client/pom.xml
+++ b/reverse-length-client/pom.xml
@@ -12,5 +12,27 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>telran.view</groupId>
+            <artifactId>cli-view</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>telran.view</groupId>
+            <artifactId>cli-view</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20240303</version>
+</dependency>
+<dependency>
+<groupId>telran.net</groupId>
+    <artifactId>echo-client</artifactId>
+    <version>1.0-SNAPSHOT</version>
+</dependency>
+    </dependencies>
 </project>
